[package]
name = "tgmodbot"
version = "0.1.0"
authors = ["angelsl <angelsl@in04.sg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
futures = "0.1.29"
log = "0.4.8"
telebot = "0.3.0"
tokio = "0.1.22"
