[package]
name = "tgmodbot"
version = "0.2.0"
authors = ["angelsl <angelsl@in04.sg>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", branch = "main" }
futures = "0.3"
tracing-subscriber = "0.2"
log = "0.4"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
